Various fixes for a11y audit fix:  - search autocomplete zone temporarily disabled  - subpages widget title modified (admin section fixed at the same time for options panel to work correctly)  - menu items, removed title tag as was a duplicate of text already showing on screen  - added black text, white background to visually hidden elements. These only show in screen readers or where vision is an issue, so highest contrast is a requirement  - improved keyboard tabbing operations

--- a/assets/scss/nhsblocks.scss
+++ b/assets/scss/nhsblocks.scss
@@ -8,6 +8,7 @@
   .nhsuk-panel-with-label__label {
     a, a:visited {
       color: $color_nhsuk-white;
+      text-decoration: none;
     }
   }
 
